crates/sgf-core/tests/snapshots/ops_nebula_footprint/footprint_add.snap
---
source: crates/sgf-core/tests/common/mod.rs
expression: value
---
Added nebula at (-362.33, -136.56) radius 30; 4 systems joined
touched: [20, 397, 408, 459]
inverse: RemoveNebula { index: 9 }
… and 3 other issues

--- gamestate
+++ gamestate
@@ -9710,6 +9710,26 @@
 	radius=25
 	galactic_object=65
 }
+nebula=
+{
+	coordinate=
+	{
+		x=-362.33
+		y=-136.56
+		origin=4294967295
+		randomized=yes
+		visual_height=3.65056
+	}
+	name=
+	{
+		key=""
+	}
+	radius=30
+	galactic_object=20
+	galactic_object=397
+	galactic_object=408
+	galactic_object=459
+}
 pop_groups=
 {
 	0=none
@@ -30314,6 +30334,10 @@
 		planet=744
 		planet=745
 		planet=746
+		ambient_object=
+		{
+			361 
+		}
 		star_class="sc_b"
 		hyperlane=
 		{
@@ -30356,6 +30380,18 @@
 		}
 		sector=4294967295
 		index=42
+		timed_modifier=
+		{
+			items=
+			{
+				
+				{
+					modifier="nebula_cloaking"
+					days=-1
+				}
+ 
+			}
+		}
 		storm=4294967295
 	}
 	21=
@@ -57041,6 +57077,10 @@
 		planet=4414
 		planet=4415
 		planet=4416
+		ambient_object=
+		{
+			362 
+		}
 		star_class="sc_m"
 		hyperlane=
 		{
@@ -57072,6 +57112,18 @@
 		}
 		sector=4294967295
 		index=42
+		timed_modifier=
+		{
+			items=
+			{
+				
+				{
+					modifier="nebula_cloaking"
+					days=-1
+				}
+ 
+			}
+		}
 		storm=4294967295
 	}
 	398=
@@ -57820,6 +57872,10 @@
 		planet=136
 		planet=137
 		planet=138
+		ambient_object=
+		{
+			363 
+		}
 		star_class="sc_b"
 		hyperlane=
 		{
@@ -57858,6 +57914,18 @@
 		}
 		sector=4294967295
 		index=41
+		timed_modifier=
+		{
+			items=
+			{
+				
+				{
+					modifier="nebula_cloaking"
+					days=-1
+				}
+ 
+			}
+		}
 		storm=4294967295
 	}
 	409=
@@ -61452,6 +61520,10 @@
 		planet=228
 		planet=229
 		planet=230
+		ambient_object=
+		{
+			364 
+		}
 		star_class="sc_f"
 		hyperlane=
 		{
@@ -61499,6 +61571,18 @@
 		}
 		sector=4294967295
 		index=41
+		timed_modifier=
+		{
+			items=
+			{
+				
+				{
+					modifier="nebula_cloaking"
+					days=-1
+				}
+ 
+			}
+		}
 		storm=4294967295
 	}
 	460=
@@ -1121518,6 +1121602,146 @@
 			appear_state=""
 		}
 	}
+	361=
+	{
+		coordinate=
+		{
+			x=0
+			y=0
+			origin=20
+		}
+		data="nebula_3"
+		properties=
+		{
+			coordinate=
+			{
+				x=11.3
+				y=15.3
+				origin=20
+			}
+			attach=
+			{
+				type=10
+				id=4294967295
+			}
+			offset=
+			{
+				0 0 0 
+			}
+			scale=1
+			entity_face_object=
+			{
+				type=10
+				id=4294967295
+			}
+			appear_state=""
+		}
+	}
+	362=
+	{
+		coordinate=
+		{
+			x=0
+			y=0
+			origin=397
+		}
+		data="nebula_1"
+		properties=
+		{
+			coordinate=
+			{
+				x=14.6
+				y=18.6
+				origin=397
+			}
+			attach=
+			{
+				type=10
+				id=4294967295
+			}
+			offset=
+			{
+				0 0 0 
+			}
+			scale=1
+			entity_face_object=
+			{
+				type=10
+				id=4294967295
+			}
+			appear_state=""
+		}
+	}
+	363=
+	{
+		coordinate=
+		{
+			x=0
+			y=0
+			origin=408
+		}
+		data="nebula_3"
+		properties=
+		{
+			coordinate=
+			{
+				x=13.94
+				y=17.94
+				origin=408
+			}
+			attach=
+			{
+				type=10
+				id=4294967295
+			}
+			offset=
+			{
+				0 0 0 
+			}
+			scale=1
+			entity_face_object=
+			{
+				type=10
+				id=4294967295
+			}
+			appear_state=""
+		}
+	}
+	364=
+	{
+		coordinate=
+		{
+			x=0
+			y=0
+			origin=459
+		}
+		data="nebula_3"
+		properties=
+		{
+			coordinate=
+			{
+				x=12.95
+				y=16.95
+				origin=459
+			}
+			attach=
+			{
+				type=10
+				id=4294967295
+			}
+			offset=
+			{
+				0 0 0 
+			}
+			scale=1
+			entity_face_object=
+			{
+				type=10
+				id=4294967295
+			}
+			appear_state=""
+		}
+	}
 }
 orbital_line=
 {
@@ -1121544,7 +1121768,7 @@
 		}
 	}
 }
-last_created_ambient_object=360
+last_created_ambient_object=364
 last_created_cosmic_storm_influence_field=6
 last_notification_id=1
 last_event_id=1
