crates/sgf-core/tests/snapshots/ops_nebula_footprint/footprint_move_systems.snap
---
source: crates/sgf-core/tests/common/mod.rs
expression: value
---
Moved 2 systems; updated 10 lane lengths; Tar Valemm #64 joined Nythran Expanse; Phargis #171 left Nythran Expanse
touched: [64, 169, 171, 444, 518, 536]
inverse: Batch { description: "Undo of \"Moved 2 systems; updated 10 lane lengths; Tar Valemm #64 joined Nythran Expanse; Phargis #171 left Nythran Expanse\"", ops: [MoveSystems { moves: [SystemMove { system: 171, x: -321.41, y: -83.9 }, SystemMove { system: 64, x: -374.3, y: -78.48 }] }, SetNebulaFootprints { footprints: [NebulaFootprint { system: 171, cloud: Some(NebulaCloud { id: 335, kind: "nebula_4" }), cloaking: true, turbulent: false }] }] }
… and 3 other issues

--- gamestate
+++ gamestate
@@ -9654,7 +9654,7 @@
 		key="Nythran_Expanse"
 	}
 	radius=30
-	galactic_object=171
+	galactic_object=64
 	galactic_object=372
 	galactic_object=444
 	galactic_object=536
@@ -33633,8 +33633,8 @@
 	{
 		coordinate=
 		{
-			x=-374.3
-			y=-78.48
+			x=-340
+			y=-60
 			origin=4294967295
 			randomized=yes
 			visual_height=3.65056
@@ -33647,7 +33647,7 @@
 		planet=1172
 		ambient_object=
 		{
-			163 
+			163 361 
 		}
 		star_class="sc_m"
 		hyperlane=
@@ -33655,12 +33655,12 @@
 			
 			{
 				to=518
-				length=45
+				length=57
 			}
  
 			{
 				to=444
-				length=22
+				length=31
 				bridge=yes
 			}
  
@@ -33695,6 +33695,18 @@
 		}
 		sector=4294967295
 		index=41
+		timed_modifier=
+		{
+			items=
+			{
+				
+				{
+					modifier="nebula_cloaking"
+					days=-1
+				}
+ 
+			}
+		}
 		storm=4294967295
 	}
 	65=
@@ -41036,7 +41048,7 @@
  
 			{
 				to=171
-				length=25
+				length=117
 			}
  
 			{
@@ -41132,8 +41144,8 @@
 	{
 		coordinate=
 		{
-			x=-321.41
-			y=-83.9
+			x=-250
+			y=-20
 			origin=4294967295
 			randomized=yes
 			visual_height=3.65056
@@ -41152,27 +41164,23 @@
 		planet=2163
 		planet=2164
 		planet=2165
-		ambient_object=
-		{
-			335 
-		}
 		star_class="sc_binary_1"
 		hyperlane=
 		{
 			
 			{
 				to=444
-				length=32
+				length=124
 			}
  
 			{
 				to=169
-				length=25
+				length=117
 			}
  
 			{
 				to=536
-				length=24
+				length=100
 			}
  
 		}
@@ -41192,18 +41200,6 @@
 		}
 		sector=4294967295
 		index=41
-		timed_modifier=
-		{
-			items=
-			{
-				
-				{
-					modifier="nebula_cloaking"
-					days=-1
-				}
- 
-			}
-		}
 		storm=4294967295
 	}
 	172=
@@ -60348,7 +60344,7 @@
  
 			{
 				to=171
-				length=32
+				length=124
 			}
  
 			{
@@ -60368,7 +60364,7 @@
  
 			{
 				to=64
-				length=22
+				length=31
 				bridge=yes
 			}
  
@@ -65734,7 +65730,7 @@
 			
 			{
 				to=64
-				length=45
+				length=57
 			}
  
 			{
@@ -67004,7 +67000,7 @@
  
 			{
 				to=171
-				length=24
+				length=100
 			}
  
 		}
@@ -1120546,41 +1120542,6 @@
 				y=17.94
 				origin=177
 			}
-			attach=
-			{
-				type=10
-				id=4294967295
-			}
-			offset=
-			{
-				0 0 0 
-			}
-			scale=1
-			entity_face_object=
-			{
-				type=10
-				id=4294967295
-			}
-			appear_state=""
-		}
-	}
-	335=
-	{
-		coordinate=
-		{
-			x=0
-			y=0
-			origin=171
-		}
-		data="nebula_4"
-		properties=
-		{
-			coordinate=
-			{
-				x=14.6
-				y=18.6
-				origin=171
-			}
 			attach=
 			{
 				type=10
@@ -1120599,6 +1120560,7 @@
 			appear_state=""
 		}
 	}
+	335=none
 	336=
 	{
 		coordinate=
@@ -1121518,6 +1121480,41 @@
 			appear_state=""
 		}
 	}
+	361=
+	{
+		coordinate=
+		{
+			x=0
+			y=0
+			origin=64
+		}
+		data="nebula_1"
+		properties=
+		{
+			coordinate=
+			{
+				x=9.32
+				y=13.32
+				origin=64
+			}
+			attach=
+			{
+				type=10
+				id=4294967295
+			}
+			offset=
+			{
+				0 0 0 
+			}
+			scale=1
+			entity_face_object=
+			{
+				type=10
+				id=4294967295
+			}
+			appear_state=""
+		}
+	}
 }
 orbital_line=
 {
@@ -1121544,7 +1121541,7 @@
 		}
 	}
 }
-last_created_ambient_object=360
+last_created_ambient_object=361
 last_created_cosmic_storm_influence_field=6
 last_notification_id=1
 last_event_id=1
