crates/sgf-core/tests/snapshots/ops_nebula_footprint/footprint_radius_shrink.snap
---
source: crates/sgf-core/tests/common/mod.rs
expression: value
---
Set Demons Eye Nebula radius to 15 (was 30); 7 systems left
touched: [0, 52, 107, 148, 275, 358, 404]
inverse: Batch { description: "Undo of \"Set Demons Eye Nebula radius to 15 (was 30); 7 systems left\"", ops: [SetNebulaRadius { index: 0, radius: 30.0 }, SetNebulaFootprints { footprints: [NebulaFootprint { system: 0, cloud: Some(NebulaCloud { id: 318, kind: "turbulent_nebula_2" }), cloaking: true, turbulent: true }, NebulaFootprint { system: 52, cloud: Some(NebulaCloud { id: 347, kind: "rare_nebula_2" }), cloaking: true, turbulent: false }, NebulaFootprint { system: 107, cloud: Some(NebulaCloud { id: 342, kind: "nebula_1" }), cloaking: true, turbulent: false }, NebulaFootprint { system: 148, cloud: Some(NebulaCloud { id: 338, kind: "nebula_3" }), cloaking: true, turbulent: false }, NebulaFootprint { system: 275, cloud: Some(NebulaCloud { id: 332, kind: "nebula_1" }), cloaking: true, turbulent: false }, NebulaFootprint { system: 358, cloud: Some(NebulaCloud { id: 327, kind: "nebula_2" }), cloaking: true, turbulent: false }, NebulaFootprint { system: 404, cloud: Some(NebulaCloud { id: 325, kind: "nebula_3" }), cloaking: true, turbulent: false }] }] }
… and 3 other issues

--- gamestate
+++ gamestate
@@ -9549,16 +9549,9 @@
 	{
 		key="Demons_Eye_Nebula"
 	}
-	radius=30
-	galactic_object=0
+	radius=15
 	galactic_object=46
-	galactic_object=52
-	galactic_object=107
 	galactic_object=123
-	galactic_object=148
-	galactic_object=275
-	galactic_object=358
-	galactic_object=404
 }
 nebula=
 {
@@ -28849,10 +28842,6 @@
 		planet=581
 		planet=582
 		planet=583
-		ambient_object=
-		{
-			318 
-		}
 		star_class="sc_g"
 		hyperlane=
 		{
@@ -28895,23 +28884,6 @@
 		}
 		sector=4294967295
 		index=27
-		timed_modifier=
-		{
-			items=
-			{
-				
-				{
-					modifier="nebula_cloaking"
-					days=-1
-				}
- 
-				{
-					modifier="turbulent_nebula"
-					days=-1
-				}
- 
-			}
-		}
 		storm_influence_fields=
 		{
 			2 4 6 
@@ -32764,10 +32736,6 @@
 		planet=1065
 		planet=1066
 		planet=1067
-		ambient_object=
-		{
-			347 
-		}
 		star_class="sc_a"
 		hyperlane=
 		{
@@ -32821,18 +32789,6 @@
 		}
 		sector=4294967295
 		index=28
-		timed_modifier=
-		{
-			items=
-			{
-				
-				{
-					modifier="nebula_cloaking"
-					days=-1
-				}
- 
-			}
-		}
 		storm_influence_fields=
 		{
 			4 
@@ -36700,10 +36656,6 @@
 		planet=1572
 		planet=1573
 		planet=1574
-		ambient_object=
-		{
-			342 
-		}
 		star_class="sc_g"
 		hyperlane=
 		{
@@ -36749,18 +36701,6 @@
 		}
 		sector=4294967295
 		index=59
-		timed_modifier=
-		{
-			items=
-			{
-				
-				{
-					modifier="nebula_cloaking"
-					days=-1
-				}
- 
-			}
-		}
 		storm_influence_fields=
 		{
 			2 4 6 
@@ -39528,10 +39468,6 @@
 		planet=1943
 		planet=1944
 		planet=6331
-		ambient_object=
-		{
-			338 
-		}
 		star_class="sc_f"
 		hyperlane=
 		{
@@ -39569,18 +39505,6 @@
 		}
 		sector=4294967295
 		index=59
-		timed_modifier=
-		{
-			items=
-			{
-				
-				{
-					modifier="nebula_cloaking"
-					days=-1
-				}
- 
-			}
-		}
 		storm_influence_fields=
 		{
 			2 4 6 
@@ -48573,10 +48497,6 @@
 		planet=3226
 		planet=3227
 		planet=6316
-		ambient_object=
-		{
-			332 
-		}
 		star_class="sc_g"
 		hyperlane=
 		{
@@ -48637,18 +48557,6 @@
 		}
 		sector=4294967295
 		index=28
-		timed_modifier=
-		{
-			items=
-			{
-				
-				{
-					modifier="nebula_cloaking"
-					days=-1
-				}
- 
-			}
-		}
 		storm_influence_fields=
 		{
 			2 4 
@@ -54449,10 +54357,6 @@
 		planet=4085
 		planet=4086
 		planet=4087
-		ambient_object=
-		{
-			327 
-		}
 		star_class="sc_m"
 		hyperlane=
 		{
@@ -54504,18 +54408,6 @@
 		}
 		sector=4294967295
 		index=27
-		timed_modifier=
-		{
-			items=
-			{
-				
-				{
-					modifier="nebula_cloaking"
-					days=-1
-				}
- 
-			}
-		}
 		storm_influence_fields=
 		{
 			4 
@@ -57554,10 +57446,6 @@
 		planet=4493
 		planet=4494
 		planet=4495
-		ambient_object=
-		{
-			325 
-		}
 		star_class="sc_b"
 		hyperlane=
 		{
@@ -57590,18 +57478,6 @@
 		}
 		sector=4294967295
 		index=60
-		timed_modifier=
-		{
-			items=
-			{
-				
-				{
-					modifier="nebula_cloaking"
-					days=-1
-				}
- 
-			}
-		}
 		storm_influence_fields=
 		{
 			2 4 6 
@@ -1119969,41 +1119845,7 @@
 			appear_state=""
 		}
 	}
-	318=
-	{
-		coordinate=
-		{
-			x=0
-			y=0
-			origin=0
-		}
-		data="turbulent_nebula_2"
-		properties=
-		{
-			coordinate=
-			{
-				x=13.61
-				y=17.61
-				origin=0
-			}
-			attach=
-			{
-				type=10
-				id=4294967295
-			}
-			offset=
-			{
-				0 0 0 
-			}
-			scale=1
-			entity_face_object=
-			{
-				type=10
-				id=4294967295
-			}
-			appear_state=""
-		}
-	}
+	318=none
 	319=
 	{
 		coordinate=
@@ -1120214,41 +1120056,7 @@
 			appear_state=""
 		}
 	}
-	325=
-	{
-		coordinate=
-		{
-			x=0
-			y=0
-			origin=404
-		}
-		data="nebula_3"
-		properties=
-		{
-			coordinate=
-			{
-				x=13.94
-				y=17.94
-				origin=404
-			}
-			attach=
-			{
-				type=10
-				id=4294967295
-			}
-			offset=
-			{
-				0 0 0 
-			}
-			scale=1
-			entity_face_object=
-			{
-				type=10
-				id=4294967295
-			}
-			appear_state=""
-		}
-	}
+	325=none
 	326=
 	{
 		coordinate=
@@ -1120284,41 +1120092,7 @@
 			appear_state=""
 		}
 	}
-	327=
-	{
-		coordinate=
-		{
-			x=0
-			y=0
-			origin=358
-		}
-		data="nebula_2"
-		properties=
-		{
-			coordinate=
-			{
-				x=14.27
-				y=18.27
-				origin=358
-			}
-			attach=
-			{
-				type=10
-				id=4294967295
-			}
-			offset=
-			{
-				0 0 0 
-			}
-			scale=1
-			entity_face_object=
-			{
-				type=10
-				id=4294967295
-			}
-			appear_state=""
-		}
-	}
+	327=none
 	328=
 	{
 		coordinate=
@@ -1120459,41 +1120233,7 @@
 			appear_state=""
 		}
 	}
-	332=
-	{
-		coordinate=
-		{
-			x=0
-			y=0
-			origin=275
-		}
-		data="nebula_1"
-		properties=
-		{
-			coordinate=
-			{
-				x=13.94
-				y=17.94
-				origin=275
-			}
-			attach=
-			{
-				type=10
-				id=4294967295
-			}
-			offset=
-			{
-				0 0 0 
-			}
-			scale=1
-			entity_face_object=
-			{
-				type=10
-				id=4294967295
-			}
-			appear_state=""
-		}
-	}
+	332=none
 	333=
 	{
 		coordinate=
@@ -1120669,41 +1120409,7 @@
 			appear_state=""
 		}
 	}
-	338=
-	{
-		coordinate=
-		{
-			x=0
-			y=0
-			origin=148
-		}
-		data="nebula_3"
-		properties=
-		{
-			coordinate=
-			{
-				x=11.3
-				y=15.3
-				origin=148
-			}
-			attach=
-			{
-				type=10
-				id=4294967295
-			}
-			offset=
-			{
-				0 0 0 
-			}
-			scale=1
-			entity_face_object=
-			{
-				type=10
-				id=4294967295
-			}
-			appear_state=""
-		}
-	}
+	338=none
 	339=
 	{
 		coordinate=
@@ -1120809,41 +1120515,7 @@
 			appear_state=""
 		}
 	}
-	342=
-	{
-		coordinate=
-		{
-			x=0
-			y=0
-			origin=107
-		}
-		data="nebula_1"
-		properties=
-		{
-			coordinate=
-			{
-				x=12.29
-				y=16.29
-				origin=107
-			}
-			attach=
-			{
-				type=10
-				id=4294967295
-			}
-			offset=
-			{
-				0 0 0 
-			}
-			scale=1
-			entity_face_object=
-			{
-				type=10
-				id=4294967295
-			}
-			appear_state=""
-		}
-	}
+	342=none
 	343=
 	{
 		coordinate=
@@ -1120984,41 +1120656,7 @@
 			appear_state=""
 		}
 	}
-	347=
-	{
-		coordinate=
-		{
-			x=0
-			y=0
-			origin=52
-		}
-		data="rare_nebula_2"
-		properties=
-		{
-			coordinate=
-			{
-				x=11.96
-				y=15.96
-				origin=52
-			}
-			attach=
-			{
-				type=10
-				id=4294967295
-			}
-			offset=
-			{
-				0 0 0 
-			}
-			scale=1
-			entity_face_object=
-			{
-				type=10
-				id=4294967295
-			}
-			appear_state=""
-		}
-	}
+	347=none
 	348=
 	{
 		coordinate=
